--- a/data/vh.html
+++ b/data/vh.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
   <img src='https://upload.wikimedia.org/wikipedia/vi/2/2f/V%C3%B5_Ho%C3%A0nh.jpg' width='50%'/>
   <h1 class="textcenter">Võ Hoành</h1>
-  <p class="subtitle textcenter">1873-1946</p>
+  <p class="subtitle textcenter">1873 - 1946</p>
   <h2>Tiểu sử</h2>
   <p>Võ Hoành, hiệu Ngọc Tiều, sinh ra tại làng Thanh Liệt, huyện Thanh Trì, tỉnh Hà Đông (nay là xã Thanh Liệt, huyện Thanh Trì, Hà Nội). Ông có người thân làm cách mạng là Chị Bảy: biết chữ Hán, gia nhập nghĩa thục, làm liên lạc viên, thường đi từ Bắc vô Nam, từ Nam qua Tàu, mua bán thổ sản mỗi nơi, kiếm tiền quyên trợ cho du học sinh.</p>
   <h2>Những đóng góp chính</h2>
