--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <iframe name="sidebar_content"></iframe>
     </div>
     <div id="credit">
-      <p id="credit_text">&copy;2022 Đại học Fulbright Việt Nam</p>
+      <p id="credit_text">ĐÔNG KINH NGHĨA THỤC @ FUV</p>
       <div id="reset_button">Reset</div>
     </div>
     <script type="text/javascript" src="index.js"></script>
