--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div id="map"></div>
     <div id="sidebar">
       <div id="sidebar_init">
-        <h1 class="textcenter">Hội thảo - Đông Kinh Nghĩa Thục</h1>
-        <button id="start_button" class="textcenter" onclick="getStarted()">Bắt đầu</button>
+        <h1 class="textcenter">Hội thảo Đông Kinh Nghĩa Thục</h1>
+        <button id="start_button" class="textcenter" onclick="getStarted()">Nhấn để bắt đầu</button>
       </div>
       <iframe name="sidebar_content"></iframe>
     </div>
     <div id="credit">
-      <p id="credit_text">ĐÔNG KINH NGHĨA THỤC @ FUV</p>
+      <p id="credit_text">ĐÔNG KINH NGHĨA THỤC 2022 @ FUV</p>
       <div id="reset_button">Reset</div>
     </div>
     <script type="text/javascript" src="index.js"></script>
