--- a/index.html
+++ b/index.html
@@ -19,37 +19,17 @@
     <div id="sidebar">
       <div id="sidebar_init">
         <h1 class="textcenter">Hội thảo Đông Kinh Nghĩa Thục 2022</h1>
-        <p>Là một phần của hội thảo Đông Kinh Nghĩa Thục, dự án Bản đồ trực tuyến kết hợp công nghệ bản đồ hiện đại và những thông tin lịch sử quý báu với mong muốn trực quan hoá các nội dung lịch sử của các nhân vật liên quan đến trường Đông Kinh Nghĩa Thục. Thông qua việc tương tác với bản đồ, người xem có thể tìm hiểu thêm về các nhân vật lịch sử và các địa danh gắn liền với cuộc đời các nhân vật này.</p> 
-          <p>Các nhân vật này bao gồm:</p>
-          <p>Lương Văn Can,
-          Cụ Tây Hồ - Phan Châu Trinh,
-          Phan Bội Châu,
-          Dương Bá Trạc,
-          Đào Nguyên Phổ,
-          Tăng Bạt Hổ,
-          Hoàng Tăng Bí,
-          Nguyễn Quyền,
-          Lương Trúc Đàm,
-          Nguyễn Thượng Hiền,
-          Ngô Đức Kế,
-          Vũ Phạm Hàm,
-          Nguyễn Văn Vĩnh,
-          Phạm Duy Tốn,
-          Nguyễn Bá Học,
-          Võ Hoành,
-          Kỳ Ngoại Hầu,
-          Lê Đại,
-          Nguyễn Hữu Cầu,
-           và Trần Chánh Chiếu.
-        </p>
+        <p>Là một phần của hội thảo Đông Kinh Nghĩa Thục, dự án Bản đồ trực tuyến kết hợp công nghệ bản đồ hiện đại và những thông tin lịch sử quý báu với mong muốn trực quan hoá các nội dung lịch sử của các nhân vật liên quan đến trường Đông Kinh Nghĩa Thục. Thông qua việc tương tác với bản đồ, người xem có thể tìm hiểu thêm về các nhân vật lịch sử và các địa danh gắn liền với cuộc đời các nhân vật này.</p>
+        <p>Các nhân vật này bao gồm:</p>
+        <p>Lương Văn Can, Cụ Tây Hồ - Phan Châu Trinh, Phan Bội Châu, Dương Bá Trạc, Đào Nguyên Phổ, Tăng Bạt Hổ, Hoàng Tăng Bí, Nguyễn Quyền, Lương Trúc Đàm, Nguyễn Thượng Hiền, Ngô Đức Kế, Vũ Phạm Hàm, Nguyễn Văn Vĩnh, Phạm Duy Tốn, Nguyễn Bá Học, Võ Hoành, Kỳ Ngoại Hầu, Lê Đại, Nguyễn Hữu Cầu, và Trần Chánh Chiếu.</p>
         <button id="start_button" class="textcenter" onclick="getStarted()">Nhấn để bắt đầu</button>
       </div>
       <iframe name="sidebar_content"></iframe>
     </div>
     <div id="credit">
       <p id="credit_text">ĐÔNG KINH NGHĨA THỤC 2022 @ FUV</p>
-      <div id="reset_button">Reset</div>
     </div>
+    <div id="reset_button" onclick="clearSidebar();">Quay lại</div>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
